docs/5.x/docs/components/SegmentedButtons/SegmentedButtons.mdx
---
title: SegmentedButtons
---

import PropTable from '@docs/components/PropTable.tsx';
import ExtendsLink from '@docs/components/ExtendsLink.tsx';
import ThemeColorsTable from '@docs/components/ThemeColorsTable.tsx';
import ScreenshotTabs from '@docs/components/ScreenshotTabs.tsx';
import ExtendedExample from '@docs/components/ExtendedExample.tsx';

Segmented buttons can be used to select options, switch views or sort elements.

<ScreenshotTabs
  screenshotData={{
    'single select': 'screenshots/segmented-button-single-select.png',
    multiselect: 'screenshots/segmented-button-multi-select.png',
  }}
/>

## Usage

```js
import * as React from 'react';
import { SafeAreaView, StyleSheet } from 'react-native';
import { SegmentedButtons } from 'react-native-paper';

const MyComponent = () => {
  const [value, setValue] = React.useState('');

  return (
    <SafeAreaView style={styles.container}>
      <SegmentedButtons
        value={value}
        onValueChange={setValue}
        buttons={[
          {
            value: 'walk',
            label: 'Walking',
          },
          {
            value: 'train',
            label: 'Transit',
          },
          { value: 'drive', label: 'Driving' },
        ]}
      />
    </SafeAreaView>
  );
};

const styles = StyleSheet.create({
  container: {
    flex: 1,
    alignItems: 'center',
  },
});

export default MyComponent;
```

## Props

<span />

<div>

### buttons (required)

</div>
  
  <PropTable componentLink="SegmentedButtons/SegmentedButtons" prop="buttons" />
  
<div>

### density

</div>
  
  <PropTable componentLink="SegmentedButtons/SegmentedButtons" prop="density" />
  
<div>

### style

</div>
  
  <PropTable componentLink="SegmentedButtons/SegmentedButtons" prop="style" />
  
<div>

### theme

</div>
  
  <PropTable componentLink="SegmentedButtons/SegmentedButtons" prop="theme" />

<span />

## Theme colors

<ThemeColorsTable
  themeColorsData={{
    checked: {
      '-': {
        backgroundColor: 'theme.colors.secondaryContainer',
        textColor: 'theme.colors.onSecondaryContainer',
        borderColor: 'theme.colors.primary',
      },
    },
    unchecked: {
      '-': {
        textColor: 'theme.colors.onSurface',
        borderColor: 'theme.colors.outline',
      },
    },
    disabled: {
      '-': {
        borderColor: 'theme.colors.surfaceDisabled',
        textColor: 'theme.colors.onSurfaceDisabled',
      },
    },
  }}
  componentName="SegmentedButtons"
/>

<span />
